[test] Major refactoring and added tests for stdin